<resources>
    <string name="app_name">SoundSculptor</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="amplitude_envelope">Amplitude Envelope</string>
    <string name="attack_function">Attack Function</string>
    <string name="attack_start">Attack Start</string>
    <string name="attack_end">Attack End</string>
    <string name="attack_time">Attack Time</string>
    <string name="sustain_function">Sustain Function</string>
    <string name="sustain_end">Sustain End</string>
    <string name="release_end">Release End</string>
    <string name="release_time">Release Time</string>
    <string name="add_frequency_envelope">Add Frequency Envelope</string>
    <string name="add_amplitude_envelope">Add Amplitude Envelope</string>
    <string name="submit">Submit</string>
    <string name="release_function">Release Function</string>
    <string name="sustain_time">Sustain Time</string>
    <string name="frequency_envelope">Frequency Envelope</string>
    <string name="graph">Graph</string>

    <string-array name="functions_array">
        <item>Linear</item>
        <item>Quadratic</item>
    </string-array>
    <string name="function">Function</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time">Time(Seconds)</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="create_new">Create new</string>
    <string name="envelopes">Envelopes</string>
    <string name="pause">Pause</string>
    <string name="add_generator">Add generator</string>


</resources>