<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/envelopeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/amplitude_envelope"
            app:layout_constraintBottom_toTopOf="@+id/textViewAttackFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewAttackFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            android:text="@string/attack_function"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldAttackStart"
            app:layout_constraintStart_toStartOf="@+id/filledTextFieldAttackStart"
            app:layout_constraintTop_toBottomOf="@id/envelopeTitle"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/spinnerAttackFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAttackFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewAttackFunction"
            app:layout_constraintTop_toTopOf="@+id/textViewAttackFunction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldAttackStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/attack_start"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldAttackEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAttackFunction"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldAttackEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/attack_end"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldAttackTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldAttackStart"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldAttackTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/attack_time"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSustainFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldAttackEnd"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewSustainFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            android:text="@string/sustain_function"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldSustainEnd"
            app:layout_constraintStart_toStartOf="@+id/filledTextFieldSustainTime"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldAttackTime"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/spinnerSustainFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewSustainFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewSustainFunction"
            app:layout_constraintTop_toTopOf="@+id/textViewSustainFunction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldSustainEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sustain_end"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldSustainTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSustainFunction"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldSustainTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sustain_time"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/textViewReleaseFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldSustainEnd"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewReleaseFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            android:text="@string/release_function"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldReleaseEnd"
            app:layout_constraintStart_toStartOf="@+id/filledTextFieldReleaseTime"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldSustainTime"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/spinnerReleaseFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewReleaseFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewReleaseFunction"
            app:layout_constraintTop_toTopOf="@+id/textViewReleaseFunction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldReleaseEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/release_end"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldReleaseTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseFunction"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldReleaseTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/release_time"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldReleaseEnd"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appCompatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldReleaseTime"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>