<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/envelopeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/amplitude_envelope"
            app:layout_constraintBottom_toTopOf="@+id/textViewFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            android:text="@string/function"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldStart"
            app:layout_constraintStart_toStartOf="@+id/filledTextFieldStart"
            app:layout_constraintTop_toBottomOf="@id/envelopeTitle"
            app:layout_constraintVertical_bias="0.5" />

        <Spinner
            android:id="@+id/spinnerFunction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewFunction"
            app:layout_constraintTop_toTopOf="@+id/textViewFunction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/start"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFunction"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:id="@+id/TextInputFieldStart"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/end"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/filledTextFieldTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldStart"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:id="@+id/TextInputFieldEnd"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:maxWidth="488dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldEnd"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:id="@+id/TextInputFieldTime"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appCompatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextFieldTime"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
